# fl-minimal

./: .gitignore  .rgignore  .version  README.md
container/dockerfiles/: dockerfile-base-after  dockerfile-base-before  dockerfile-cpp  dockerfile-cuda  dockerfile-dependencies  dockerfile-python  dockerfile-ssh
container/files/etc/ssh/: start-container
container/files/home/ubuntu/.ssh/: container-key.pub
container/scripts/: build-ctr  enter-ctr  remove-ctr  set-env-vars  start-ctr  stop-ctr  test-arrayfire
fl-minimal/: build.sh  test.sh
fl-minimal/flashlight/: CMakeLists.txt
fl-minimal/flashlight/cmake/: flashlightConfig.cmake.in
fl-minimal/flashlight/flashlight/fl/: CMakeLists.txt  flashlight.h
fl-minimal/flashlight/flashlight/fl/autograd/: CMakeLists.txt  Functions.cpp  Functions.h
fl-minimal/flashlight/flashlight/fl/autograd/backend/cpu/: Conv2D.cpp
fl-minimal/flashlight/flashlight/fl/autograd/backend/cuda/: Conv2D.cpp
fl-minimal/flashlight/flashlight/fl/autograd/backend/cuda/operators/: AdvancedIndex.cu
fl-minimal/flashlight/flashlight/fl/autograd/backend/opencl/: Conv2D.cpp
fl-minimal/flashlight/flashlight/fl/autograd/tensor/: AutogradExtension.h  AutogradExtensionBackends.h  AutogradOps.cpp  AutogradOps.h  CMakeLists.txt
fl-minimal/flashlight/flashlight/fl/autograd/tensor/backend/cudnn/: Conv2D.cpp  CudnnAutogradExtension.cpp  CudnnAutogradExtension.h
fl-minimal/flashlight/flashlight/fl/common/: CMakeLists.txt  Defines.h  Types.h  Utils.cpp  common.h
fl-minimal/flashlight/flashlight/fl/memory/managers/: CachingMemoryManager.cpp
fl-minimal/flashlight/flashlight/fl/nn/: CMakeLists.txt  nn.h
fl-minimal/flashlight/flashlight/fl/nn/modules/: Conv2D.cpp  Conv2D.h
fl-minimal/flashlight/flashlight/fl/optim/: CMakeLists.txt  optim.h
fl-minimal/flashlight/flashlight/fl/tensor/: CMakeLists.txt  TensorAdapter.cpp  TensorBase.h
fl-minimal/flashlight/flashlight/fl/tensor/backend/af/: CMakeLists.txt
fl-minimal/flashlight/flashlight/fl/test/: CMakeLists.txt
fl-minimal/flashlight/flashlight/fl/test/autograd/: AutogradTest.cpp
fl-minimal/flashlight/flashlight/fl/test/optim/: OptimTest.cpp
scripts/: copy-changes  diff-diff-flashlight  diff-flashlight  diff-flashlight-view  test-arrayfire
